--- a/Tribute-Page/index.html
+++ b/Tribute-Page/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main id="main">Hello</main>
+    <main id="main">
+      <div id="title">Spiders</div>
+      <figure id="img-div">
+        <img
+          id="img-pic"
+          src="https://media.istockphoto.com/photos/high-angle-view-of-tarantula-spider-poecilotheria-metallica-white-picture-id113553911"
+          alt="tarantula"
+        />
+        <figcaption id="img-caption">Tarantulas</figcaption>
+      </figure>
+    </main>
   </body>
 </html>
