all but two user stories, tribute page

--- a/Tribute-Page/index.html
+++ b/Tribute-Page/index.html
@@ -16,7 +16,10 @@
           src="https://media.istockphoto.com/photos/high-angle-view-of-tarantula-spider-poecilotheria-metallica-white-picture-id113553911"
           alt="tarantula"
         />
-        <figcaption id="img-caption">Tarantulas</figcaption>
+        <div id="img-caption">
+          A Tarantula, which can climb with the aid of retractable claws that
+          are at the end of each leg.
+        </div>
       </figure>
     </main>
   </body>
