all user stories complete, tribute page

--- a/Tribute-Page/index.html
+++ b/Tribute-Page/index.html
@@ -21,6 +21,61 @@
           are at the end of each leg.
         </div>
       </figure>
+      <div id="tribute-info">
+        <div>
+          Spiders are arthropods that have eight legs. They have more legs and
+          different body parts than insects, and they also don’t move around in
+          the same way insects do. Spiders are in the arachnid class, but not
+          all arachnids are spiders. There are about 40,000 known species of
+          spiders. Most spiders use a web to catch their prey, which is usually
+          insects. The largest spider is the Goliath tarantula, and they can
+          catch birds. The smallest spider in the world is less than 1mm long!
+        </div>
+        <ul>
+          <li>
+            Spiders are arthropods, like insects – they have an exoskeleton that
+            is on the outside of their body instead of the inside (unlike
+            humans).
+          </li>
+          <li>There are around 40,000 known species of spiders.</li>
+          <li>
+            There are a few main differences between spiders and insects, and
+            one of these is the number of legs – all spiders have eight legs.
+          </li>
+          <li>
+            Spider bodies are made up of two main parts – the cephalothorax and
+            the abdomen.
+          </li>
+          <li>Spiders create silk from spinneret glands in their abdomen.</li>
+          <li>
+            Spider silk is extremely strong, and has a number of different uses.
+          </li>
+          <li>
+            One of the ways spiders use silk is to create webs, which catch
+            prey.
+          </li>
+          <li>
+            There are a few different kinds of spider webs, such as orbs,
+            funnels and sheets.
+          </li>
+          <li>
+            Not all spiders catch their prey in webs – some hide and wait for
+            insects to come by.
+          </li>
+          <li>
+            Spiders lay eggs, and store them in an egg sac to keep them safe.
+          </li>
+        </ul>
+        <div>
+          For more info on spiders, visit their site at
+          <a
+            id="tribute-link"
+            href="https://www.theschoolrun.com/homework-help/spiders"
+            target="_blank"
+            >The School Run</a
+          >
+        </div>
+      </div>
     </main>
   </body>
 </html>
