7/16 tests, technical documentation

--- a/Technical-Documentation-Page/index.html
+++ b/Technical-Documentation-Page/index.html
@@ -9,20 +9,34 @@
   </head>
   <body>
     <main id="main-doc">
-      <section class="main-section">
+      <section id="css_documentation" class="main-section">
         <header>CSS Documentation</header>
+        <p>Box Model</p>
+        <p>Flex Box</p>
+        <p>CSS Grid</p>
+        <p>Media Queries</p>
       </section>
-      <section class="main-section">
+      <section id="box_model" class="main-section">
         <header>Box Model</header>
+        <p>Overview</p>
+        <p>Different Parts</p>
+        <p>Height and Width</p>
       </section>
-      <section class="main-section">
+      <section id="flex_box" class="main-section">
         <header>Flex Box</header>
+        <p>Flex Container</p>
+        <p>Flex Items</p>
+        <p>Flex Responsive</p>
       </section>
-      <section class="main-section">
-        <header>Grid</header>
+      <section id="css_grid" class="main-section">
+        <header>CSS Grid</header>
+        <p>Intro</p>
+        <p>Grid Container</p>
+        <p>Grid Items</p>
       </section>
-      <section class="main-section">
+      <section id="media_queries" class="main-section">
         <header>Media Queries</header>
+        <p>Syntax</p>
       </section>
     </main>
   </body>
