17/17 tests passed, slightly refactored css, survey form

--- a/Survey-Form/index.html
+++ b/Survey-Form/index.html
@@ -40,7 +40,7 @@
       <br />
       <label for="cars" class="bold-head">Favorite Exercise</label>
       <br />
-      <select id="dropdown" class="dropdown" name="exercises">
+      <select id="dropdown" name="exercises">
         <option value="running">Running</option>
         <option value="weightlifting">Weightlifitng</option>
         <option value="tennis">Tennis</option>
